--- a/apps/embed/landing.html
+++ b/apps/embed/landing.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script
-      src="http://localhost:3001/widget.js"
+      src="https://ai-support-platform-widget.vercel.app/widget.js"
       data-organization-id="org_32nHSjbAzt20udaTLyVOIgjYLPD"
     ></script>
   </body>
